2006-12-11 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/cc2430.h: fixed missing ';'

2006-12-10 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libc/stdio/vfprintf.c,
	* device/lib/pic16/libc/stdio/printf_small.c,
	* device/lib/pic16/libc/stdio/printf_timy.c: pop int from stack for
	  char arguments, as char varargs are cast to int by the caller,
	  hopefully fixes #1604915 (other device libraries are still affected)

2006-12-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
	* src/mcs51/ralloc.c (packRegsForAssign),
	* src/hc08/ralloc.c (packRegsForAssign): fixed bug #1605880

2006-12-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/malloc.h: removed init_dynamic_memory
	* device/lib/malloc.c: made init_dynamic_memory static and automatically
	  call it once from malloc. Also use _sdcc_heap[] from _heap.c
	* device/lib/_heap.c: new, added, contains _sdcc_heap[]
	* device/lib/libsdcc.lib,
	* device/lib/Makefile.in,
	* support/regression/ports/mcs51-xstack-auto/spec.mk: added _heap.c
	* doc/sdccman.lyx: documented use of new _heap.c
	* support/regression/tests/malloc.c: removed init_dynamic_memory
	* src/cdbFile.c(spacesToUnderscores): new function,
	  (cdbWriteEndFunction, cdbWriteCLine): use spacesToUnderscores, fixes bug
	  1068030
	* device/include/tinibios.h: removed defines for putchar and getchar
	* device/lib/ds390/Makefile.in: added putchar.c
	* device/lib/ds390/putchar.c: new, added, fixes bug 1465671

2006-12-09 Borut Razem <borut.razem AT siol.net>

	* support/cpp2/sdcc.h: prevent multiple inclusion
	* support/cpp2/options.h: deleted

2006-12-08 Borut Razem <borut.razem AT siol.net>

	* support/cpp2/sdcc.h: removed x*alloc() macros
	* support/cpp2/libiberty.h: uncommented out x*alloc() declarations
	* support/cpp2/Makefile.bcc, support/cpp2/Makefile.in,
	  support/cpp2/sdcpp.sdc: x*alloc files added to the project
	* support/cpp2/system.h: moved #include "sdcc.h"